--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<h1>Sommaire</h1>
 		<a href="identification.html"> identifiants </a><br>
 		<a href="register.html"> Page d'inscription </a> <br>
-		<a href="./formulaire/form.html"> Formulaire </a>
+		<a href="./formulaire/form.html"> Formulaire </a> <br>
+		<a href="./TP 5.2/profil.html"> Profil utilisateur</a>
 	</center>
 </body>
 </html>
