--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 		<a href="identification.html"> identifiants </a><br>
 		<a href="register.html"> Page d'inscription </a> <br>
 		<a href="./formulaire/form.html"> Formulaire </a><br>
-		<br>
-		<a href="./mission_1/qcm.html"> QCM </a>
-		<br>
-		<a href="./TP6-1/ex_section1.html"> TP6 page 1 </a>
-		<br>
-		<a href="./TP6-1/ex_section2.html"> TP6 page 2 </a>
+		<a href="./mission_1/.qcm.html"> QCM </a><br>
+		<a href="./TP6-1/.ex_section1.html"> TP6 page 1 </a><br>
+		<a href="./TP6-1/.ex_section2.html"> TP6 page 2 </a> <br>
+		<a href="./TP7/CV.html"> TP 7 CV</a>
 	</center>
 </body>
 </html>
