--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<a href="./mission_1/.qcm.html"> QCM </a><br>
 		<a href="./TP6-1/.ex_section1.html"> TP6 page 1 </a><br>
 		<a href="./TP6-1/.ex_section2.html"> TP6 page 2 </a> <br>
-		<a href="./TP7/CV.html"> TP 7 CV</a>
+		<a href="./TP7/CV.html"> TP 7 CV</a><br> <br>
+		<a href="./1er JS/boutons.html"> TP JS </a>
 	</center>
 </body>
 </html>
