--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 		<a href="./mission_1/.qcm.html"> QCM </a><br>
 		<a href="./TP6-1/.ex_section1.html"> TP6 page 1 </a><br>
 		<a href="./TP6-1/.ex_section2.html"> TP6 page 2 </a> <br>
-		<a href="./TP7/CV.html"> TP 7 CV</a><br> <br>
+		<a href="./TP7/CV.html"> TP 7 CV</a><br>
 		<a href="./1er JS/boutons.html"> TP JS </a> <br>
-		<a href="./Calc JS/calculatrice.html"> Calculatrice </a> <br>
+		<a href="./Calc JS/calculatrice.html"> Calculatrice </a> <br> <br>
+		<a href="./TP8/facture.html"> Facture </a> <br>
 	</center>
 </body>
 </html>
