--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<a href="./1er JS/boutons.html"> TP JS </a> <br>
 		<a href="./Calc JS/calculatrice.html"> Calculatrice </a> <br> <br>
 		<a href="./TP8/facture.html"> Facture </a> <br>
+		<a href="./exo/facture.html">  mouse hover couleur </a> <br>
 	</center>
 </body>
 </html>
