--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+    <title>Menu responsive HTML déroulant</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style_sommaire.css">
+    <script src="main_sommaire.js"></script>
 </head>
 <body>
-	<center>
-		<h1>Sommaire</h1>
-		<a href="identification.html"> identifiants </a><br>
-		<a href="register.html"> Page d'inscription </a> <br>
-		<a href="./formulaire/form.html"> Formulaire </a><br>
-		<a href="./mission_1/.qcm.html"> QCM </a><br>
-		<a href="./TP6-1/.ex_section1.html"> TP6 page 1 </a><br>
-		<a href="./TP6-1/.ex_section2.html"> TP6 page 2 </a> <br>
-		<a href="./TP7/CV.html"> TP 7 CV</a><br>
-		<a href="./1er JS/boutons.html"> TP JS </a> <br>
-		<a href="./Calc JS/calculatrice.html"> Calculatrice </a> <br> <br>
-		<a href="./TP8/facture.html"> Facture </a> <br>
-		<a href="./exo/facture.html">  mouse hover couleur </a> <br>
-	</center>
+    <nav>
+        <label for="menu-mobile" class="menu-mobile">Menu</label>
+        <input type="checkbox" id="menu-mobile" role="button">
+        <ul>
+            <li class="menu-html"><a href="#">HTML & CSS</a>
+                <ul class="submenu">
+                    <li><a href="./identification.html">Identifiants</a></li>
+                    <li><a href="./register.html">Page d'inscription</a></li>
+                    <li><a href="./TP4/index.html">iFrames</a></li>
+                    <li><a href="./TP6-1/ex_section1.html">TP 6.1</a></li>
+                    <li><a href="./TP6-1/ex_section2.html">TP 6.2</a></li>
+                    <li><a href="./mission_1/qcm.html">QCM</a></li>
+                    <li><a href="./formulaire/form.html">Formulaire</a></li>
+                </ul>
+            </li>
+            <li class="menu-js"><a href="#">JavaScript</a>
+                <ul class="submenu">
+                    <li><a href="./mission_1_js/qcm.html">QCM JS</a></li>
+                    <li><a href="./1er JS/boutons.html">Bouttons JS</a></li>
+                    <li><a href="./Calc JS/calculatrice.html">Calculatrice</a></li>
+                    <li><a href="./TP8/facture.html">Facture</a></li>
+                    <li><a href="./exo/facture.html">Hover couleur tableau</a></li>
+                </ul>
+            </li>
+            <li class="menu-contact"><a href="#">Bases de données</a></li>
+            <li class="menu-contact"><a href="#">Missions</a>
+                <ul class="submenu">
+                    <li><a href="./mission_1_js/qcm.html">Mission 1 (QCM)</a></li>
+                    <li><a href="./TP7/CV.html">Mission 2 (CV)</a></li>
+                    <li><a href="#">Mission 3</a></li>
+                </ul>
+            </li>
+            <li class="menu-contact"><a href="#">Certifications</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
