--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li><a href="./Calc JS/calculatrice.html">Calculatrice</a></li>
                     <li><a href="./TP8/facture.html">Facture</a></li>
                     <li><a href="./exo/facture.html">Hover couleur tableau</a></li>
+                    <li><a href="./login_js/boutonslogin.html">TP 9 (avec bonus)</a></li>
                 </ul>
             </li>
             <li class="menu-contact"><a href="#">Bases de données</a></li>
@@ -40,7 +41,7 @@
                     <li><a href="#">Mission 3</a></li>
                 </ul>
             </li>
-            <li class="menu-contact"><a href="#">Certifications</a></li>
+            <li class="menu-contact"><a href="./certif/cert.html">Certifications</a></li>
         </ul>
     </nav>
 </body>
