--- a/login_js/styled_login.html
+++ b/login_js/styled_login.html
@@ -13,13 +13,11 @@
             <button onclick="affichagetab()">Affichage Tableau</button>
             <button onclick="affichagetab2()">Affichage Tableau 2</button>
             <button onclick="login()">Se connecter</button>
-            <button onclick="window.location.href='identification.html';">connection 2</button>
+            <button onclick="login2()">connection 2</button>
             <button onclick="cdc()">String</button>
             <button onclick="swich()">Couleurs</button>
             <button onclick="bonus()">Bonus</button>
             <button onclick="window.location.href='../tableau_dynamique/tab_dyn.html';">Ajouter Ligne</button>
-            
-            <button onclick="login3()">Se connecter 3</button>
         </center>
     </div>
 </body>
