--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <ul class="submenu">
                     <li><a href="./mission_1_js/qcm.html">Mission 1 (QCM)</a></li>
                     <li><a href="./TP7/CV.html">Mission 2 (CV)</a></li>
-                    <li><a href="#">Mission 3</a></li>
+                    <li><a href="./certif/cert.html">Mission 3</a></li>
                 </ul>
             </li>
             <li class="menu-contact"><a href="./certif/cert.html">Certifications</a></li>
