--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
                     <li><a href="./login_js/boutonslogin.html">TP 9 (avec bonus)</a></li>
                 </ul>
             </li>
-            <li class="menu-contact"><a href="#">Bases de données</a></li>
+            <li class="menu-contact"><a href="#">Bases de données</a>
+                <ul class="submenu">
+                    <li><a href="./SQL_TP1/bd test.pdf">TP 1</a></li>
+                </ul>
+            </li>
             <li class="menu-contact"><a href="#">Missions</a>
                 <ul class="submenu">
                     <li><a href="./mission_1_js/qcm.html">Mission 1 (QCM)</a></li>
