--- a/certif/cert.html
+++ b/certif/cert.html
@@ -21,7 +21,15 @@
     <div id="cert4">
         <img src="test2.png" class="image4">
     </div>
-    
+    <div id="cert5">
+        <img src="test3-4.png" class="image5">
+    </div>
+    <div id="cert6">
+        <img src="test5.png" class="image6">
+    </div>
+    <div id="cert7">
+        <img src="test_full.png" class="image7">
+    </div>
 
     
 </body>
